--- a/index.html
+++ b/index.html
@@ -1,62 +1,93 @@
-<!-- 
- -----------------------------------------------------------------------------------------------------
- Needed info
- -----------------------------------------------------------------------------------------------------
- 
- Create a HTML page with the following details:
+<!DOCTYPE html>
+<html lang="en">
 
- - Title with your name
- - Name (Heading)
- - Bio (eg education history, anything else you want to share)
- - Image 
- - List of hobbies (numbered)
- - Contact form (that people can fill) with the following fields: 
-    1) Name
-    2) Email
-    3) Message
-    4) Submit button
- - Footer with your name
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="stylesheet" href="style.css">
+   <title>Dashboard</title>
+</head>
 
-------------------------------------------------------------------------------------------------------
--->
+<body>
+   <header>
+      <a href="/">
+         <img src="/logo.png" alt="Company logo" class="logo">
+      </a>
+      <div class="profile">
+         <p>
+            B
+         </p>
+         <button>Log out</button>
+      </div>
+   </header>
+   <main>
 
-<!-- 
-------------------------------------------------------------------------------------------------------
+      <nav class="tab-nav">
+         <ul>
+            <li>
+               <a href="">
+                  <img src="/chart.svg" alt="">
+                  <span class="link-text">Dashboard</span>
+               </a>
+            </li>
+            <li>
+               <a href="">
+                  <img src="/bill.svg" alt="">
+                  <span class="link-text">Trade</span>
+               </a>
+            </li>
+         </ul>
+      </nav>
 
-Imagine you are a professional chef and you want to share your favourite dish and how to make the dish. 
-You want to show people the dish (name + image), the ingredients used to make the dish and the recipe to follow to make the dish.
-You also want to allow people to leave a comment.
-Finally, you want to show the other dishes that you can make in a table. 
+      <div class="all">
+         <h1>Select a session duration</h1>
+         <div class="clear">
+            <button>Clear selection</button>
+         </div>
 
- - Create a page to display the information. This page should have the name of the recipe and the image of the dish.
 
- - This page should show the ingredients used and the recipe to follow
- - Include a section where one can leave a comment.
- - Include a table that shows the other dishes that you sell in your restaurant. The table should have the following columns: Name, Price, 
 
- Additional
-  - Lonk to the 
-------------------------------------------------------------------------------------------------------
--->
+         <div class="container">
+            <div>
+               <h2>3 hours</h2>
+               <p>Min stake: $20</p>
+            </div>
+            <div>
+               <h2>6 hours</h2>
+               <p>Min stake: $30</p>
+            </div>
+            <div>
+               <h2>9 hours</h2>
+               <p>Min stake: $40</p>
+            </div>
+            <div>
+               <h2>12 hours</h2>
+               <p>Min stake: $50</p>
+            </div>
+         </div>
 
-<!-- 
-------------------------------------------------------------------------------------------------------
+         <div class="next">
+            <button>Next</button>
+         </div>
 
-Today's task is building a travel agency website. Imagine you are a tours and travel company and you want to showcase the travel destinations you offer. You also want to show information about your company (e.g when it was founded, location, contact details,)
-Your clients are giving you their testimonials so you want to show that too.
-The travel agency website has a blog section that will have a list of blog articles
-You have social media pages that you want to link to.
+         <nav class="mobile-nav">
+            <ul>
+               <li>
+                  <a href="">
+                     <img src="/chart.svg" alt="">
+                     Dashboard
+                  </a>
+               </li>
+               <li>
+                  <a href="">
+                     <img src="/bill.svg" alt="">
+                     Trade
+                  </a>
+               </li>
+            </ul>
+         </nav>
+      </div>
+   </main>
+</body>
 
-We want to structure this information into different pages (e.g home, about, blog).
-We want a navigation section to navigate between the diferent pages
-
-******************************************************************************************************
-These pages should be structured using semantic html elements
-******************************************************************************************************
-
- - Create the home page with the destinations details
- - Create an about page with the information about the company, the contact details, and a contact form
- - Create a blog page with a list of blog articles. Each article should have a title, brief description, image, and date published
- - Each page should have a footer with the contact information and social media links
- -----------------------------------------------------------------------------------------------------
--->
+</html>
